custom hooks, dynamic routing, lazy loading, online status event listener

--- a/index.css
+++ b/index.css
@@ -68,15 +68,20 @@ body {
 .funtions-container {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-around;
     gap: 2rem;
+}
+
+.search-container {
+    display: flex;
+    gap: 0.5rem;
 }
 
 /* Basic styling for the input field */
 input[type="text"] {
     padding: 10px;
     border: 1px solid #ccc;
-    border-radius: 4px;
+    border-radius: 2rem;
     font-size: 16px;
     outline: none; /* Remove default outline */
 }
@@ -92,7 +97,7 @@ button {
     background-color: #007bff; /* Blue background color */
     color: #fff; /* White text color */
     border: none; /* Remove default border */
-    border-radius: 4px;
+    border-radius: 2rem;
     cursor: pointer; /* Show pointer cursor on hover */
     font-size: 16px;
 }
@@ -117,6 +122,11 @@ button:hover {
     height: 20rem;
     display: flex;
     border: 1px solid #5e5e5e;
+}
+
+.restaurant-card > a , .res-container > a{
+    text-decoration: none;
+    color: inherit
 }
 
 .res-name {
